# Projeto_CRUD_LPI1

./: .gitignore  Atividade.h  CMakeLists.txt  CMakeLists.txt.user.36670ee  Equipe.cpp  Equipe.h  Projeto_Prog1.qrc  README.md  Subequipe.h  cappage.cpp  cappage.h  cappage.ui  editarJanela.cpp  editarJanela.h  editarJanela.ui  loginpage.cpp  loginpage.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  usuario.h
forms/: cappage.ui  editarJanela.ui  loginpage.ui  mainwindow.ui
include/: Equipe.h  editarJanela.h  loginpage.h  mainwindow.h
src/: editarJanela.cpp  loginpage.cpp  mainwindow.cpp
